--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
-
+      <header class="main-hedder">
+        <nav class="site-navigation">
+            <a class="main-hedder-logo"><img src="http://placehold.it/150x100" alt="Логотип"></a>
+          <ul>
+            <li><a href="#">Информация</a></li>
+              <li><a href="#">Фото и видео</a></li>
+              <li><a href="#">Карта штата</a></li>
+              <li><a href="catalog.html">Гостинницы</a></li>
+              </ul>
+          </nav>  
+      </header>
+      <main class="container">
+          <h1 class="visually-hidden">Седона</h1>
+        <section class="reasons">
+        <h2  class="visually-hidden">Причины для выбора</h2>
+        <ul class="reasons-list">
+          <li class="reasons-item">
+          <h3>Настоящий городок</h3></li>
+          <li class="reasons-item"><h3>Там есть мост дьявола</h3></li>
+          <li class="reasons-item"><h3>Небольшая площадь</h3></li>
+          <li class="reasons-item"><h3>Красивая дорога</h3></li>
+          <li class="reasons-item"><h3>Мало туристов</h3></li>
+          </ul>
+        </section>
+          
+      </main>
+      <futer>
+      
+      </futer>
   </body>
 </html>
