--- a/index.html
+++ b/index.html
@@ -20,19 +20,64 @@
           <h1 class="visually-hidden">Седона</h1>
         <section class="reasons">
         <h2  class="visually-hidden">Причины для выбора</h2>
-        <ul class="reasons-list">
+        <ul class="first-reasons-list">
           <li class="reasons-item">
-          <h3>Настоящий городок</h3></li>
-          <li class="reasons-item"><h3>Там есть мост дьявола</h3></li>
-          <li class="reasons-item"><h3>Небольшая площадь</h3></li>
-          <li class="reasons-item"><h3>Красивая дорога</h3></li>
-          <li class="reasons-item"><h3>Мало туристов</h3></li>
+          <h3>Настоящий городок</h3>
+            <p>№1</p>
+          <p>Седона не атракцион для туристов, там течёт своя жизнь</p></li>
+          <li class="first-reasons-item"><h3>Там есть мост дьявола</h3>
+          <p>№2</p>
+          <p>Да, по нему можно пройти! если конечно вы осмелитесь</p></li>
+          <li class="first-reasons-item"><h3>Небольшая площадь</h3>
+          <p>№3</p>
+          <p>Все достопримечательности находятся очень близко</p></li>
+          <li class="first-reasons-item"><h3>Красивая дорога</h3>
+          <p>№4</p>
+          <p>хать в седону из лас-вегаса совсем не скучно!</p></li>
+          <li class="first-reasons-item"><h3>Мало туристов</h3>
+          <p>№5</p>
+          <p>Большинство едет в гранд каньон и толпится там</p></li>
           </ul>
+          <ul class="second-reasons-list">
+            <h3>Жилье</h3>
+          <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          </ul>
+          <li class="second-reasons-item">
+            <h3>Еда</h3>
+          <p>Всегда заказывай фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+    <li class="second-reasons-item">
+      <h3>Сувениры</h3>
+          <p>Не только китайского, но и местного производства!</p>
+          </li>
+        </section>
+        <section class="desire">
+        <h4>Заинтересовались?</h4>
+          <p>Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в седоне</p>
+          <!-- Здесь будет форма -->
         </section>
           
       </main>
-      <futer>
-      
-      </futer>
+      <footer class="main-footer">
+      <p class="visit">#visitsedona</p>
+        <div class="footer-social">
+        <ul>
+       <li><a class="social-button" href="#">Вконтакте</a></li>
+        <li><a class="social-button" href="#">Фейсбук</a></li>
+        <li><a class="social-button" href="#">Инстаграм</a></li>
+        </ul>
+        </div>
+        <p class="footer-copyright">
+          <b>Website by</b>
+        <a class="button" href="https://htmlacademy.ru">HTML Academy</a></p>
+      </footer>
+    <section>
+    <h2>Поиск гостинницы в седоне</h2>
+       <!-- Здесь будет форма -->
+      <button class="modal-close">x</button>
+    </section>
+    <section class="modal modal-map">
+      <h2 class="visually-hidden">Как до нас добраться</h2>
+      <button class="modal-close">x</button>
   </body>
 </html>
