--- a/index.html
+++ b/index.html
@@ -79,5 +79,6 @@
     <section class="modal modal-map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
       <button class="modal-close">x</button>
+    </section>
   </body>
 </html>
