--- a/catalog.html
+++ b/catalog.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <header class="main-hedder">
+    <header class="main-heder">
         <nav class="site-navigation">
             <a class="main-hedder-logo"><img src="http://placehold.it/150x100" alt="Логотип"></a>
           <ul>
