--- a/catalog.html
+++ b/catalog.html
@@ -9,11 +9,11 @@
     <header class="main-heder">
         <nav class="site-navigation">
             <a class="main-hedder-logo"><img src="http://placehold.it/150x100" alt="Логотип"></a>
-          <ul>
-            <li><a href="#">Информация</a></li>
-              <li><a href="#">Фото и видео</a></li>
-              <li><a href="#">Карта штата</a></li>
-              <li class="site-navigation-current"><a href="catalog.html">Гостинницы</a></li>
+          <ul class="navigation">
+            <li class="navigation-item"><a href="#">Информация</a></li>
+              <li class="navigation-item"><a href="#">Фото и видео</a></li>
+              <li class="navigation-item"><a href="#">Карта штата</a></li>
+              <li class="site-navigation-current navigation-item"><a href="catalog.html">Гостинницы</a></li>
               </ul>
           </nav>  
       </header>
