--- a/catalog.html
+++ b/catalog.html
@@ -18,6 +18,7 @@
           </nav>  
       </header>
       <main class="container">
+      <main class="main">
     <section class="filters">
         <h2 class="visually-hidden">Фильтр проживания</h2>
         <!-- Здесь будет форма -->
