--- a/catalog.html
+++ b/catalog.html
@@ -31,6 +31,8 @@
           <li class="option-collating-item"><a href="#">По типу</a></li>
           <li class="option-collating-item"><a href="#">По рейтингу</a></li>
           </ul>
+          <span class="arrow-up-active">Стрелка вверх</span>
+          <span class="arrow-down">Стрелка вниз</span>
         </section>
         <section class="catalog">
         <h2 class="visually-hidden">Список доступного жилья</h2>
