--- a/catalog.html
+++ b/catalog.html
@@ -38,10 +38,8 @@
         <h2 class="visually-hidden">Список доступного жилья</h2>
         <ul class="catalog-list">
           <li class="catalog-item">
-            <h3><a href="catalog-item.html">Amara resort & spa</a></h3>
-             <p>
-               <a href="catalog-item.html"><img src="http://placehold.it/150x100" alt="Amara resort & spa"></a>
-            </p>
+            <div><img src="http://placehold.it/150x100" alt="Amara resort & spa"></div>
+            <a href="catalog-item.html">Amara resort & spa</a>
            <p class="catalog-item-kind"><b>Гостинница</b>
             <a class="button" href="#">Подробнее</a></p>
             <p class="catalog-item-price">
