--- a/catalog.html
+++ b/catalog.html
@@ -47,22 +47,18 @@
               <a class="button" href="#">Забронировать</a></p>
           </li>
           <li class="catalog-item">
-            <h3><a href="catalog-item.html">Desert quail inn</a></h3>
-             <p>
-               <a href="catalog-item.html"><img src="http://placehold.it/150x100" alt="Desert quail inn"></a>
-            </p>
-           <p class="catalog-item-kind"><b>Мотель</b>
+            <div><img src="http://placehold.it/150x100" alt="Desert quail inn"></div>
+            <a href="catalog-item.html">Desert quail inn</a>
+            <p class="catalog-item-kind"><b>Мотель</b>
             <a class="button" href="#">Подробнее</a></p>
             <p class="catalog-item-price">
             <b>от 4000 Р.</b>
               <a class="button" href="#">Забронировать</a></p>
           </li>
           <li class="catalog-item">
-            <h3><a href="catalog-item.html">Villas at poco diablo</a></h3>
-             <p>
-               <a href="catalog-item.html"><img src="http://placehold.it/150x100" alt="Villas at poco diablo"></a>
-            </p>
-           <p class="catalog-item-kind"><b>Апартаменты</b>
+            <div><img src="http://placehold.it/150x100" alt="Villas at poco diablo"></div>
+            <a href="catalog-item.html">Villas at poco diablo</a>
+            <p class="catalog-item-kind"><b>Апартаменты</b>
             <a class="button" href="#">Подробнее</a></p>
             <p class="catalog-item-price">
             <b>от 4000 Р.</b>
