--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <header class="main-hedder">
+    <div class="wrapper"></div>
     <header class="main-heder">
         <nav class="site-navigation">
             <a class="main-hedder-logo"><img src="http://placehold.it/150x100" alt="Логотип"></a>
