--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <div class="wrapper"></div>
     <header class="main-heder">
         <nav class="site-navigation">
-            <a class="main-hedder-logo"><img src="http://placehold.it/150x100" alt="Логотип"></a>
+          <img class="main-hedder-logo" src="http://placehold.it/150x100" alt="Логотип">
           <ul class="navigation">
             <li class="navigation-item"><a href="#">Информация</a></li>
               <li class="navigation-item"><a href="#">Фото и видео</a></li>
