--- a/catalog.html
+++ b/catalog.html
@@ -46,6 +46,9 @@
             <b>от 4000 Р.</b>
               <a class="button" href="#">Забронировать</a></p>
           </li>
+          <li class="ratings-house-stars"><p>Рейтинг:8,5</p>
+          <span class="number-stars">Четыре звезды</span>
+          </li>
           <li class="catalog-item">
             <div><img src="http://placehold.it/150x100" alt="Desert quail inn"></div>
             <a href="catalog-item.html">Desert quail inn</a>
@@ -55,6 +58,9 @@
             <b>от 4000 Р.</b>
               <a class="button" href="#">Забронировать</a></p>
           </li>
+          <li class="ratings-house-stars"><p>Рейтинг:8,9</p>
+          <span class="number-stars">Три звезды</span>
+          </li>
           <li class="catalog-item">
             <div><img src="http://placehold.it/150x100" alt="Villas at poco diablo"></div>
             <a href="catalog-item.html">Villas at poco diablo</a>
@@ -63,6 +69,9 @@
             <p class="catalog-item-price">
             <b>от 4000 Р.</b>
               <a class="button" href="#">Забронировать</a></p>
+          </li>
+          <li class="ratings-house-stars"><p>Рейтинг:9,2</p>
+          <span class="number-stars">Две звезды</span>
           </li>
         </ul>
       </section>
