--- a/catalog.html
+++ b/catalog.html
@@ -90,6 +90,10 @@
        <li><a class="social-button" href="#">Вконтакте</a></li>
         <li><a class="social-button" href="#">Фейсбук</a></li>
         <li><a class="social-button" href="#">Инстаграм</a></li>
+        <ul class="social-network">
+       <li><a class="social-button social network" href="#">Вконтакте</a></li>
+        <li><a class="social-button social network" href="#">Фейсбук</a></li>
+        <li><a class="social-button social network" href="#">Инстаграм</a></li>
         </ul>
         </div>
         <p class="footer-copyright">
