--- a/catalog.html
+++ b/catalog.html
@@ -98,6 +98,8 @@
         </div>
         <p class="footer-copyright">
           <b>Website by</b>
+        <p class="footer-copyright bold">
+        Website by
         <a class="button" href="https://htmlacademy.ru">HTML Academy</a></p>
       </footer>
   </body>
