Исправления в основной странице(1)
лого больше не ссылка

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
       <header class="main-hedder">
         <nav class="site-navigation">
-            <a class="main-hedder-logo"><img src="http://placehold.it/150x100" alt="Логотип"></a>
+          <img class="main-hedder-logo" src="http://placehold.it/150x100" alt="Логотип">
           <ul>
             <li><a href="#">Информация</a></li>
               <li><a href="#">Фото и видео</a></li>
