Исправления в основной странице(2)
Изменил <b> на класс

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <li><a class="social-button" href="#">Инстаграм</a></li>
         </ul>
         </div>
-        <p class="footer-copyright">
-          <b>Website by</b>
+        <p class="footer-copyright bold">
+          Website by
         <a class="button" href="https://htmlacademy.ru">HTML Academy</a></p>
       </footer>
     <section>
