Исправления в основной странице(3)
Изменил структуру списка

--- a/index.html
+++ b/index.html
@@ -17,15 +17,30 @@
           </nav>  
       </header>
       <main class="container">
+        <div><img class="background picture" src="http://placehold.it/150x100" alt="фоновая картинка"></div>
           <h1 class="visually-hidden">Седона</h1>
         <section class="reasons">
         <h2  class="visually-hidden">Причины для выбора</h2>
-        <ul class="first-reasons-list">
-          <li class="reasons-item">
+               <div>
           <h3>Настоящий городок</h3>
             <p>№1</p>
-          <p>Седона не атракцион для туристов, там течёт своя жизнь</p></li>
-          <li class="first-reasons-item"><h3>Там есть мост дьявола</h3>
+          <p>Седона не атракцион для туристов, там течёт своя жизнь</p>
+          <div>
+          <p class="bold">Жилье</p>
+          <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          </div>
+          <div>
+          <p class="bold">Еда</p>
+          <p>Всегда заказывайте фирменный бургер, не разочаруетесь</p>
+          </div>
+          <div>
+          <p class="bold">Сувениры</p>
+          <p>Не только китайского, но и местного производства!</p>
+          </div>
+          </div>
+        <ul class="first-reasons-list">
+          <li class="first-reasons-item">
+          <h3>Там есть мост дьявола</h3>
           <p>№2</p>
           <p>Да, по нему можно пройти! если конечно вы осмелитесь</p></li>
           <li class="first-reasons-item"><h3>Небольшая площадь</h3>
@@ -38,19 +53,7 @@
           <p>№5</p>
           <p>Большинство едет в гранд каньон и толпится там</p></li>
           </ul>
-          <ul class="second-reasons-list">
-            <h3>Жилье</h3>
-          <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-          </ul>
-          <li class="second-reasons-item">
-            <h3>Еда</h3>
-          <p>Всегда заказывай фирменный бургер, вы не разочаруетесь!</p>
-          </li>
-    <li class="second-reasons-item">
-      <h3>Сувениры</h3>
-          <p>Не только китайского, но и местного производства!</p>
-          </li>
-        </section>
+          </section>
         <section class="desire">
         <h4>Заинтересовались?</h4>
           <p>Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в седоне</p>
