Исправления основной страницы(дополнение)
Изменил див с городком, добавил список с классами

--- a/index.html
+++ b/index.html
@@ -22,21 +22,23 @@
         <section class="reasons">
         <h2  class="visually-hidden">Причины для выбора</h2>
                <div>
+                 <div><img class="picture-city-flag" src="http://placehold.it/150x100" alt="картинка с флагом">Картинка домов с флагом</div>
           <h3>Настоящий городок</h3>
             <p>№1</p>
           <p>Седона не атракцион для туристов, там течёт своя жизнь</p>
-          <div>
-          <p class="bold">Жилье</p>
+          <ul class="additional-advantage-list">
+          <li class="additional-advantage-item"><p class="bold">Жилье</p>
           <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-          </div>
-          <div>
+          </li>
+          <li class="additional-advantage-item">
           <p class="bold">Еда</p>
           <p>Всегда заказывайте фирменный бургер, не разочаруетесь</p>
-          </div>
-          <div>
+          </li>
+         <li class="additional-advantage-item">
           <p class="bold">Сувениры</p>
           <p>Не только китайского, но и местного производства!</p>
-          </div>
+           </li>
+          </ul>
           </div>
         <ul class="first-reasons-list">
           <li class="first-reasons-item">
