--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <div class="wrapper"></div>
+    <div class="wrapper">
     <header class="main-heder">
         <nav class="site-navigation">
           <img class="main-hedder-logo" src="http://placehold.it/150x100" alt="Логотип">
@@ -89,5 +89,6 @@
         Website by
         <a class="button" href="https://htmlacademy.ru">HTML Academy</a></p>
       </footer>
+    </div>
   </body>
 </html>
