--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <div class="wrapper">
       <header class="main-hedder">
         <nav class="site-navigation">
           <img class="main-hedder-logo" src="http://placehold.it/150x100" alt="Логотип">
@@ -85,5 +86,6 @@
       <h2 class="visually-hidden">Как до нас добраться</h2>
       <button class="modal-close">x</button>
     </section>
+      </div>
   </body>
 </html>
