--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <div class="wrapper">
     <header class="main-heder">
         <nav class="site-navigation">
-          <img class="main-hedder-logo" src="http://placehold.it/150x100" alt="Логотип">
+          <a><img class="main-hedder-logo" src="http://placehold.it/150x100" alt="Логотип"></a>
           <ul class="navigation">
             <li class="navigation-item"><a href="#">Информация</a></li>
               <li class="navigation-item"><a href="#">Фото и видео</a></li>
