--- a/catalog.html
+++ b/catalog.html
@@ -30,8 +30,10 @@
           <li class="option-collating-item"><a href="#">По типу</a></li>
           <li class="option-collating-item"><a href="#">По рейтингу</a></li>
           </ul>
-          <span class="arrow-up-active">Стрелка вверх</span>
+          <div class="arrows">
+          <span class="arrow-up arrow-up-active">Стрелка вверх</span>
           <span class="arrow-down">Стрелка вниз</span>
+          </div>
         </section>
         <section class="catalog">
         <h2 class="visually-hidden">Список доступного жилья</h2>
