--- a/catalog.html
+++ b/catalog.html
@@ -39,7 +39,7 @@
         <h2 class="visually-hidden">Список доступного жилья</h2>
         <ul class="catalog-list">
           <li class="catalog-item">
-            <div><img src="http://placehold.it/150x100" alt="Amara resort & spa"></div>
+            <div class="building-photo"><img src="http://placehold.it/150x100" alt="Amara resort & spa"></div>
             <a href="catalog-item.html">Amara resort & spa</a>
            <p class="catalog-item-kind"><b>Гостинница</b>
             <a class="button" href="#">Подробнее</a></p>
