--- a/catalog.html
+++ b/catalog.html
@@ -40,39 +40,54 @@
         <ul class="catalog-list">
           <li class="catalog-item">
             <div class="building-photo"><img src="http://placehold.it/150x100" alt="Amara resort & spa"></div>
+            <div class="filling">
             <a href="catalog-item.html">Amara resort & spa</a>
            <p class="catalog-item-kind"><b>Гостинница</b>
             <a class="button" href="#">Подробнее</a></p>
             <p class="catalog-item-price">
             <b>от 4000 Р.</b>
               <a class="button" href="#">Забронировать</a></p>
+            </div>
           </li>
-          <li class="ratings-house-stars"><p>Рейтинг:8,5</p>
+          <li class="ratings-house-stars">
+            <div class="rating">
+              <p>Рейтинг:8,5</p>
           <span class="number-stars">Четыре звезды</span>
+            </div>
           </li>
           <li class="catalog-item">
             <div><img src="http://placehold.it/150x100" alt="Desert quail inn"></div>
+            <div class="filling">
             <a href="catalog-item.html">Desert quail inn</a>
             <p class="catalog-item-kind"><b>Мотель</b>
             <a class="button" href="#">Подробнее</a></p>
             <p class="catalog-item-price">
             <b>от 4000 Р.</b>
               <a class="button" href="#">Забронировать</a></p>
+            </div>
           </li>
-          <li class="ratings-house-stars"><p>Рейтинг:8,9</p>
+          <li class="ratings-house-stars">
+            <div class="rating">
+            <p>Рейтинг:8,9</p>
           <span class="number-stars">Три звезды</span>
+            </div>
           </li>
           <li class="catalog-item">
             <div><img src="http://placehold.it/150x100" alt="Villas at poco diablo"></div>
+            <div class="filling">
             <a href="catalog-item.html">Villas at poco diablo</a>
             <p class="catalog-item-kind"><b>Апартаменты</b>
             <a class="button" href="#">Подробнее</a></p>
             <p class="catalog-item-price">
             <b>от 4000 Р.</b>
               <a class="button" href="#">Забронировать</a></p>
+            </div>
           </li>
-          <li class="ratings-house-stars"><p>Рейтинг:9,2</p>
+          <li class="ratings-house-stars">
+            <div class="rating">
+            <p>Рейтинг:9,2</p>
           <span class="number-stars">Две звезды</span>
+            </div>
           </li>
         </ul>
       </section>
