Изменения основной страницы
добавил класс

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           </nav>  
       </header>
       <main class="container">
-        <div><img class="background picture" src="http://placehold.it/150x100" alt="фоновая картинка"></div>
+        <div class="background"><img class="background picture" src="http://placehold.it/150x100" alt="фоновая картинка"></div>
           <h1 class="visually-hidden">Седона</h1>
         <section class="reasons">
         <h2  class="visually-hidden">Причины для выбора</h2>
