--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <section class="reasons">
         <h2  class="visually-hidden">Причины для выбора</h2>
                <div>
-                 <div><img class="picture-city-flag" src="http://placehold.it/150x100" alt="картинка с флагом">Картинка домов с флагом</div>
+                 <div class="picture-city"><img class="picture-city-flag" src="http://placehold.it/150x100" alt="картинка с флагом">Картинка домов с флагом</div>
+                 <div class="one-reasons">
           <h3>Настоящий городок</h3>
             <p>№1</p>
           <p>Седона не атракцион для туристов, там течёт своя жизнь</p>
