--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
       <p class="visit">#visitsedona</p>
         <div class="footer-social">
         <ul>
-       <li><a class="social-button" href="#">Вконтакте</a></li>
-        <li><a class="social-button" href="#">Фейсбук</a></li>
-        <li><a class="social-button" href="#">Инстаграм</a></li>
+       <li><a class="social-button social network" href="#">Вконтакте</a></li>
+        <li><a class="social-button social network" href="#">Фейсбук</a></li>
+        <li><a class="social-button social network" href="#">Инстаграм</a></li>
         </ul>
         </div>
         <p class="footer-copyright bold">
