--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     </section>
     <section class="modal modal-map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
+      <!-- Здесь будет форма -->
       <button class="modal-close">x</button>
     </section>
       </div>
