--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
       <header class="main-hedder">
         <nav class="site-navigation">
           <img class="main-hedder-logo" src="http://placehold.it/150x100" alt="Логотип">
-          <ul>
-            <li><a href="#">Информация</a></li>
-              <li><a href="#">Фото и видео</a></li>
-              <li><a href="#">Карта штата</a></li>
-              <li><a href="catalog.html">Гостинницы</a></li>
-              </ul>
-          </nav>  
+          <ul class="navigation-list">
+            <li class="navigation-item"><a href="#">Информация</a></li>
+            <li class="navigation-item"><a href="#">Фото и видео</a></li>
+            <li class="navigation-item"><a href="#">Карта штата</a></li>
+            <li class="navigation-item"><a href="catalog.html">Гостинницы</a></li>
+          </ul>
+        </nav>
       </header>
       <main class="container">
         <div class="background"><img class="background picture" src="http://placehold.it/150x100" alt="фоновая картинка"></div>
