--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         </nav>
       </header>
       <main class="container">
-        <div class="background"><img class="background picture" src="http://placehold.it/150x100" alt="фоновая картинка"></div>
-          <h1 class="visually-hidden">Седона</h1>
+        <div class="promotional"><img class="promotional-picture" src="http://placehold.it/150x100" alt="картинка с пейзажем"></div>
         <section class="reasons">
         <h2  class="visually-hidden">Причины для выбора</h2>
                <div>
