--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
       <main class="container">
         <div class="promotional"><img class="promotional-picture" src="http://placehold.it/150x100" alt="картинка с пейзажем"></div>
         <section class="reasons">
-        <h2  class="visually-hidden">Причины для выбора</h2>
-               <div>
-                 <div class="picture-city"><img class="picture-city-flag" src="http://placehold.it/150x100" alt="картинка с флагом">Картинка домов с флагом</div>
-                 <div class="one-reasons">
-          <h3>Настоящий городок</h3>
-            <p>№1</p>
-          <p>Седона не атракцион для туристов, там течёт своя жизнь</p>
-                 </div>
+          <h2  class="visually-hidden">Причины для выбора</h2>
+          <div class="block-picture">
+            <div class="picture-city"><img class="picture-city-flag" src="http://placehold.it/150x100" alt="картинка с флагом">Картинка домов с флагом
+            </div>
+            <div class="one-reason">
+              <h3 class="one-reason reason-title">Настоящий городок</h3>
+              <p class="one-reason reason-subtitle">№1</p>
+              <p class="one-reason reason-about">Седона не атракцион для туристов, там течёт своя жизнь</p>
+            </div>
           </div>
           <ul class="additional-advantage-list">
           <li class="additional-advantage-item"><p class="bold">Жилье</p>
