--- a/index.html
+++ b/index.html
@@ -43,19 +43,27 @@
           <p>Не только китайского, но и местного производства!</p>
            </li>
           </ul>
-          <li class="first-reasons-item">
-          <h3>Там есть мост дьявола</h3>
-          <p>№2</p>
-          <p>Да, по нему можно пройти! если конечно вы осмелитесь</p></li>
-          <li class="first-reasons-item"><h3>Небольшая площадь</h3>
-          <p>№3</p>
-          <p>Все достопримечательности находятся очень близко</p></li>
-          <li class="first-reasons-item"><h3>Красивая дорога</h3>
-          <p>№4</p>
-          <p>хать в седону из лас-вегаса совсем не скучно!</p></li>
-          <li class="first-reasons-item"><h3>Мало туристов</h3>
-          <p>№5</p>
-          <p>Большинство едет в гранд каньон и толпится там</p></li>
+          <ul class="another-reasons-list">
+            <li class="another-reasons-item">
+              <h3 class="another-reasons reason-title">Там есть мост дьявола</h3>
+              <p class="another-reasons reason-subtitle">№2</p>
+              <p class="another-reasons reason-about">Да, по нему можно пройти! если конечно вы осмелитесь</p>
+            </li>
+            <li class="another-reasons-item">
+              <h3 class="another-reasons reasons-title">Небольшая площадь</h3>
+              <p class="nother-reasons reasons-subtitle">№3</p>
+              <p class="nother-reasons reasons-about">Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="another-reasons-item">
+              <h3 class="another-reasons reasons-title">Красивая дорога</h3>
+              <p class="nother-reasons reasons-subtitle">№4</p>
+              <p class="nother-reasons reasons-about">Ехать в седону из лас-вегаса совсем не скучно!</p>
+            </li>
+            <li class="another-reasons-item">
+              <h3 class="another-reasons reasons-title">Мало туристов</h3>
+              <p class="nother-reasons reasons-subtitle">№5</p>
+              <p class="nother-reasons reasons-about">Большинство едет в гранд каньон и толпится там</p>
+            </li>
           </ul>
           </section>
         <section class="desire">
