--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           </ul>
           </section>
         <section class="desire">
-        <h4>Заинтересовались?</h4>
-          <p>Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в седоне</p>
+          <h4 class="desire-title">Заинтересовались?</h4>
+          <p class="desire-info">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в седоне</p>
           <!-- Здесь будет форма -->
         </section>
           
