--- a/index.html
+++ b/index.html
@@ -86,16 +86,15 @@
           Website by
         <a class="button" href="https://htmlacademy.ru">HTML Academy</a></p>
       </footer>
-    <section>
-    <h2>Поиск гостинницы в седоне</h2>
-       <!-- Здесь будет форма -->
-      <button class="modal-close">x</button>
-    </section>
-    <section class="modal modal-map">
-      <h2 class="visually-hidden">Как до нас добраться</h2>
-      <!-- Здесь будет форма -->
-      <button class="modal-close">x</button>
-    </section>
-      </div>
+      <section class="city-hotels">
+        <h2 class="city-hotels-title">Поиск гостинницы в седоне</h2>
+        <!-- Здесь будет форма -->
+        <button class="modal-close">x</button>
+      </section>
+      <section class="modal modal-map">
+        <h2 class="visually-hidden">Как до нас добраться</h2>
+        <button class="modal-close">x</button>
+      </section>
+    </div>
   </body>
 </html>
