--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </header>
       <main class="container">
         <div class="promotional"><img class="promotional-picture" src="http://placehold.it/150x100" alt="картинка с пейзажем"></div>
+        <h1 class="visually-hidden">Седона</h1>
         <section class="reasons">
           <h2  class="visually-hidden">Причины для выбора</h2>
           <div class="block-picture">
@@ -31,17 +32,17 @@
             </div>
           </div>
           <ul class="additional-advantage-list">
-          <li class="additional-advantage-item"><p class="bold">Жилье</p>
-          <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-          </li>
-          <li class="additional-advantage-item">
-          <p class="bold">Еда</p>
-          <p>Всегда заказывайте фирменный бургер, не разочаруетесь</p>
-          </li>
-         <li class="additional-advantage-item">
-          <p class="bold">Сувениры</p>
-          <p>Не только китайского, но и местного производства!</p>
-           </li>
+            <li class="additional-advantage-item"><p class="bold">Жилье</p>
+              <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+            </li>
+            <li class="additional-advantage-item">
+              <p class="bold">Еда</p>
+              <p>Всегда заказывайте фирменный бургер, не разочаруетесь</p>
+            </li>
+            <li class="additional-advantage-item">
+              <p class="bold">Сувениры</p>
+              <p>Не только китайского, но и местного производства!</p>
+            </li>
           </ul>
           <ul class="another-reasons-list">
             <li class="another-reasons-item">
@@ -65,26 +66,25 @@
               <p class="nother-reasons reasons-about">Большинство едет в гранд каньон и толпится там</p>
             </li>
           </ul>
-          </section>
+        </section>
         <section class="desire">
           <h4 class="desire-title">Заинтересовались?</h4>
           <p class="desire-info">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в седоне</p>
           <!-- Здесь будет форма -->
         </section>
-          
       </main>
       <footer class="main-footer">
-      <p class="visit">#visitsedona</p>
+        <p class="visit">#visitsedona</p>
         <div class="footer-social">
-        <ul>
-       <li><a class="social-button social network" href="#">Вконтакте</a></li>
-        <li><a class="social-button social network" href="#">Фейсбук</a></li>
-        <li><a class="social-button social network" href="#">Инстаграм</a></li>
-        </ul>
+          <ul>
+            <li><a class="social-button social network" href="#">Вконтакте</a></li>
+            <li><a class="social-button social network" href="#">Фейсбук</a></li>
+            <li><a class="social-button social network" href="#">Инстаграм</a></li>
+          </ul>
         </div>
         <p class="footer-copyright bold">
           Website by
-        <a class="button" href="https://htmlacademy.ru">HTML Academy</a></p>
+          <a class="button" href="https://htmlacademy.ru">HTML Academy</a></p>
       </footer>
       <section class="city-hotels">
         <h2 class="city-hotels-title">Поиск гостинницы в седоне</h2>
