--- a/catalog.html
+++ b/catalog.html
@@ -39,7 +39,7 @@
         <h2 class="visually-hidden">Список доступного жилья</h2>
         <ul class="catalog-list">
           <li class="catalog-item">
-            <div class="building-photo"><img src="http://placehold.it/150x100" alt="Amara resort & spa"></div>
+            <div class="building-photo"><img src="img/Amara resort & spa.jpg" width="130" height="90" alt="Amara resort & spa"></div>
             <div class="filling">
               <a href="catalog-item.html">Amara resort & spa</a>
               <p class="catalog-item-kind"><b>Гостинница</b>
@@ -54,7 +54,7 @@
             </div>
           </li>
           <li class="catalog-item">
-            <div><img src="http://placehold.it/150x100" alt="Desert quail inn"></div>
+            <div><img src="img/Desert quail inn.jpg" width="130" height="90" alt="Desert quail inn"></div>
             <div class="filling">
               <a href="catalog-item.html">Desert quail inn</a>
               <p class="catalog-item-kind"><b>Мотель</b>
@@ -69,7 +69,7 @@
             </div>
           </li>
           <li class="catalog-item">
-            <div><img src="http://placehold.it/150x100" alt="Villas at poco diablo"></div>
+            <div><img src="img/Villas at poco diablo.jpg" width="130" height="90" alt="Villas at poco diablo"></div>
             <div class="filling">
               <a href="catalog-item.html">Villas at poco diablo</a>
               <p class="catalog-item-kind"><b>Апартаменты</b>
