--- a/catalog.html
+++ b/catalog.html
@@ -10,9 +10,9 @@
         <nav class="site-navigation">
           <a><img class="main-hedder-logo" src="img/logo-sedona.svg" width="140" height="72" alt="Логотип"></a>
           <ul class="navigation">
-            <li class="navigation-item"><a href="#">Информация</a></li>
-            <li class="navigation-item"><a href="#">Фото и видео</a></li>
-            <li class="navigation-item"><a href="#">Карта штата</a></li>
+            <li class="navigation-item"><a href="info.html">Информация</a></li>
+            <li class="navigation-item"><a href="media.html">Фото и видео</a></li>
+            <li class="navigation-item"><a href="map.html">Карта штата</a></li>
             <li class="site-navigation-current navigation-item"><a href="catalog.html">Гостинницы</a></li>
           </ul>
         </nav>
