--- a/catalog.html
+++ b/catalog.html
@@ -20,7 +20,39 @@
       <main class="main">
       <section class="filters">
         <h2 class="visually-hidden">Фильтр проживания</h2>
-        <!-- Здесь будет форма -->
+        <form class="filter" method="get" action="https://echo.htmlacademy.ru">
+          <fieldset>
+            <legend>Инфраструктура:</legend>
+            <ul>
+              <li class="filter-option">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="pool" id="filter-pool" checked><label for="filter-pool">Бассейн</label></li>
+              <li class="filter-option">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="parking" id="filter-parking"><label for="filter-parking">Парковка</label></li>
+              <li class="filter-option">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="wi-fi" id="filter-wi-fi"><label for="filter-wi-fi">Wi-fi</label></li>
+            </ul>
+          </fieldset>
+          <fieldset>
+            <legend>Тип жилья:</legend>
+            <ul>
+              <li class="filter-option">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="hotel" id="filter-hotel" checked><label for="filter-hotel">Гостиница</label></li>
+              <li class="filter-option">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Motel" id="filter-Motel" checked><label for="filter-Motel">Мотель</label>Мотель</li>
+              <li class="filter-option">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="apartment" id="filter-apartment" checked><label for="filter-apartment">Апартаменты</label></li>
+            </ul>
+          </fieldset>
+          <fieldset>
+            <legend>Стоимость в сутки(Р):</legend>
+            <label>
+              <input type="range" name="radio">от 0
+            </label>
+            <label>
+              <input type="range" name="radio">до3000
+            </label>
+          </fieldset>
+        </form>
       </section>
       <section class="options">
         <p class="option-look">Найдено:3</p>
